// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the templates that existed before the catalogue > colecao with everything arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "BACKDROP",
        "isActive": true,
        "items": [
          {
            "categoryId": "0199d000-0000-7000-8000-000000000001",
            "id": "capa",
            "imageUrl": "https://cdn.example/proteinas.png",
            "subtitle": "Para depois do treino",
            "target": "CATEGORY",
            "title": "Proteínas",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "align": "CENTER",
        "body": "Apresente a coleção: o que ela reúne e para quem foi pensada.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "GRID",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 24,
        "position": 0,
        "source": "CATEGORY",
        "sourceCategoryId": "0199d000-0000-7000-8000-000000000001",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "INLINE",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > colecao with everything arranges the bands it always did 2`] = `"https://cdn.example/proteinas.png"`;

exports[`the templates that existed before the catalogue > colecao with no category arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "BACKDROP",
        "isActive": true,
        "items": [
          {
            "id": "capa",
            "imageUrl": "https://cdn.example/whey.png",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
            "title": "Whey Baunilha 900 g",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "align": "CENTER",
        "body": "Apresente a coleção: o que ela reúne e para quem foi pensada.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": null,
        "title": "Compre agora",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 8,
        "position": 0,
        "source": "NEWEST",
        "title": "Novidades",
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "INLINE",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 4,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > colecao with no category arranges the bands it always did 2`] = `"https://cdn.example/whey.png"`;

exports[`the templates that existed before the catalogue > colecao with no picture arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "subtitle": "Para depois do treino",
        "title": "Proteínas",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "align": "CENTER",
        "body": "Apresente a coleção: o que ela reúne e para quem foi pensada.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "GRID",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 24,
        "position": 0,
        "source": "CATEGORY",
        "sourceCategoryId": "0199d000-0000-7000-8000-000000000001",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "INLINE",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > colecao with no picture arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > colecao with no product arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Minha página",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "CONTAINED",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > colecao with no product arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > colecao with nothing to promise arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "BACKDROP",
        "isActive": true,
        "items": [
          {
            "categoryId": "0199d000-0000-7000-8000-000000000001",
            "id": "capa",
            "imageUrl": "https://cdn.example/proteinas.png",
            "subtitle": "Para depois do treino",
            "target": "CATEGORY",
            "title": "Proteínas",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "align": "CENTER",
        "body": "Apresente a coleção: o que ela reúne e para quem foi pensada.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "GRID",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 24,
        "position": 0,
        "source": "CATEGORY",
        "sourceCategoryId": "0199d000-0000-7000-8000-000000000001",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "INLINE",
        "isActive": true,
        "items": [],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": false,
      "position": 3,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > colecao with nothing to promise arranges the bands it always did 2`] = `"https://cdn.example/proteinas.png"`;

exports[`the templates that existed before the catalogue > em-branco with everything arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Minha página",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "CONTAINED",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > em-branco with everything arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > em-branco with no category arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Minha página",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "CONTAINED",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > em-branco with no category arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > em-branco with no picture arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Minha página",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "CONTAINED",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > em-branco with no picture arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > em-branco with no product arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Minha página",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "CONTAINED",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > em-branco with no product arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > em-branco with nothing to promise arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Minha página",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "CONTAINED",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > em-branco with nothing to promise arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > lancamento with everything arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "SPLIT",
        "isActive": true,
        "items": [
          {
            "id": "capa",
            "imageUrl": "https://cdn.example/whey.png",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "subtitle": "Chegou. Conheça a novidade",
            "target": "PRODUCT",
            "title": "Whey Baunilha 900 g",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Por que você vai gostar",
      },
      {
        "align": "CENTER",
        "body": "Proteína isolada.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 1,
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": null,
        "title": "Compre agora",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "CARDS",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 8,
        "position": 0,
        "source": "NEWEST",
        "title": "Mais novidades",
      },
    ],
    "section": {
      "isActive": true,
      "position": 4,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "ACCORDION",
        "isActive": true,
        "items": [
          {
            "answer": "Conte o prazo e a forma de entrega para a região do cliente.",
            "id": "entrega",
            "question": "Quanto tempo leva a entrega?",
          },
          {
            "answer": "Explique como funciona a troca: em quantos dias e em que condições.",
            "id": "troca",
            "question": "Posso trocar ou devolver?",
          },
          {
            "answer": "Aceitamos PIX e dinheiro.",
            "id": "pagamento",
            "question": "Quais são as formas de pagamento?",
          },
        ],
        "kind": "FAQ",
        "position": 0,
        "title": "Perguntas frequentes",
      },
    ],
    "section": {
      "isActive": true,
      "position": 5,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "body": "Aproveite enquanto tem no estoque.",
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "id": "botao",
            "label": "Comprar agora",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
          },
        ],
        "kind": "CALL_TO_ACTION",
        "position": 0,
        "title": "Garanta o seu",
      },
    ],
    "section": {
      "isActive": true,
      "position": 6,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > lancamento with everything arranges the bands it always did 2`] = `"https://cdn.example/whey.png"`;

exports[`the templates that existed before the catalogue > lancamento with no category arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "SPLIT",
        "isActive": true,
        "items": [
          {
            "id": "capa",
            "imageUrl": "https://cdn.example/whey.png",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "subtitle": "Chegou. Conheça a novidade",
            "target": "PRODUCT",
            "title": "Whey Baunilha 900 g",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Por que você vai gostar",
      },
      {
        "align": "CENTER",
        "body": "Proteína isolada.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 1,
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": null,
        "title": "Compre agora",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "CARDS",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 8,
        "position": 0,
        "source": "NEWEST",
        "title": "Mais novidades",
      },
    ],
    "section": {
      "isActive": true,
      "position": 4,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "ACCORDION",
        "isActive": true,
        "items": [
          {
            "answer": "Conte o prazo e a forma de entrega para a região do cliente.",
            "id": "entrega",
            "question": "Quanto tempo leva a entrega?",
          },
          {
            "answer": "Explique como funciona a troca: em quantos dias e em que condições.",
            "id": "troca",
            "question": "Posso trocar ou devolver?",
          },
          {
            "answer": "Aceitamos PIX e dinheiro.",
            "id": "pagamento",
            "question": "Quais são as formas de pagamento?",
          },
        ],
        "kind": "FAQ",
        "position": 0,
        "title": "Perguntas frequentes",
      },
    ],
    "section": {
      "isActive": true,
      "position": 5,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "body": "Aproveite enquanto tem no estoque.",
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "id": "botao",
            "label": "Comprar agora",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
          },
        ],
        "kind": "CALL_TO_ACTION",
        "position": 0,
        "title": "Garanta o seu",
      },
    ],
    "section": {
      "isActive": true,
      "position": 6,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > lancamento with no category arranges the bands it always did 2`] = `"https://cdn.example/whey.png"`;

exports[`the templates that existed before the catalogue > lancamento with no picture arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "subtitle": "Chegou. Conheça a novidade",
        "title": "Whey Baunilha 900 g",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Por que você vai gostar",
      },
      {
        "align": "CENTER",
        "body": "Proteína isolada.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 1,
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": null,
        "title": "Compre agora",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "CARDS",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 8,
        "position": 0,
        "source": "NEWEST",
        "title": "Mais novidades",
      },
    ],
    "section": {
      "isActive": true,
      "position": 4,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "ACCORDION",
        "isActive": true,
        "items": [
          {
            "answer": "Conte o prazo e a forma de entrega para a região do cliente.",
            "id": "entrega",
            "question": "Quanto tempo leva a entrega?",
          },
          {
            "answer": "Explique como funciona a troca: em quantos dias e em que condições.",
            "id": "troca",
            "question": "Posso trocar ou devolver?",
          },
          {
            "answer": "Aceitamos PIX e dinheiro.",
            "id": "pagamento",
            "question": "Quais são as formas de pagamento?",
          },
        ],
        "kind": "FAQ",
        "position": 0,
        "title": "Perguntas frequentes",
      },
    ],
    "section": {
      "isActive": true,
      "position": 5,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "body": "Aproveite enquanto tem no estoque.",
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "id": "botao",
            "label": "Comprar agora",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
          },
        ],
        "kind": "CALL_TO_ACTION",
        "position": 0,
        "title": "Garanta o seu",
      },
    ],
    "section": {
      "isActive": true,
      "position": 6,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > lancamento with no picture arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > lancamento with no product arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Minha página",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "CONTAINED",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > lancamento with no product arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > lancamento with nothing to promise arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "SPLIT",
        "isActive": true,
        "items": [
          {
            "id": "capa",
            "imageUrl": "https://cdn.example/whey.png",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "subtitle": "Chegou. Conheça a novidade",
            "target": "PRODUCT",
            "title": "Whey Baunilha 900 g",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Por que você vai gostar",
      },
      {
        "align": "CENTER",
        "body": "Proteína isolada.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 1,
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": null,
        "title": "Compre agora",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "CARDS",
        "isActive": true,
        "items": [],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": false,
      "position": 3,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 8,
        "position": 0,
        "source": "NEWEST",
        "title": "Mais novidades",
      },
    ],
    "section": {
      "isActive": true,
      "position": 4,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "ACCORDION",
        "isActive": true,
        "items": [
          {
            "answer": "Conte o prazo e a forma de entrega para a região do cliente.",
            "id": "entrega",
            "question": "Quanto tempo leva a entrega?",
          },
          {
            "answer": "Explique como funciona a troca: em quantos dias e em que condições.",
            "id": "troca",
            "question": "Posso trocar ou devolver?",
          },
          {
            "answer": "Conte quais formas de pagamento a loja aceita.",
            "id": "pagamento",
            "question": "Quais são as formas de pagamento?",
          },
        ],
        "kind": "FAQ",
        "position": 0,
        "title": "Perguntas frequentes",
      },
    ],
    "section": {
      "isActive": true,
      "position": 5,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "body": "Aproveite enquanto tem no estoque.",
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "id": "botao",
            "label": "Comprar agora",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
          },
        ],
        "kind": "CALL_TO_ACTION",
        "position": 0,
        "title": "Garanta o seu",
      },
    ],
    "section": {
      "isActive": true,
      "position": 6,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > lancamento with nothing to promise arranges the bands it always did 2`] = `"https://cdn.example/whey.png"`;

exports[`the templates that existed before the catalogue > promocao-relampago with everything arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "BACKDROP",
        "isActive": true,
        "items": [
          {
            "id": "capa",
            "imageUrl": "https://cdn.example/whey.png",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "subtitle": "Só por pouco tempo",
            "target": "PRODUCT",
            "title": "Whey Baunilha 900 g em oferta",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "endsAt": "2026-09-30T02:00:00.000Z",
            "id": "fim",
          },
        ],
        "kind": "COUNTDOWN",
        "position": 0,
        "title": "A oferta termina em",
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": "Estoque limitado",
        "title": "Oferta relâmpago",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 12,
        "position": 0,
        "source": "ON_SALE",
        "title": "Mais ofertas",
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "INLINE",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 4,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "body": "Garanta o seu antes que acabe.",
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "id": "botao",
            "label": "Aproveitar a oferta",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
          },
        ],
        "kind": "CALL_TO_ACTION",
        "position": 0,
        "title": "A oferta acaba logo",
      },
    ],
    "section": {
      "isActive": true,
      "position": 5,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > promocao-relampago with everything arranges the bands it always did 2`] = `"https://cdn.example/whey.png"`;

exports[`the templates that existed before the catalogue > promocao-relampago with no category arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "BACKDROP",
        "isActive": true,
        "items": [
          {
            "id": "capa",
            "imageUrl": "https://cdn.example/whey.png",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "subtitle": "Só por pouco tempo",
            "target": "PRODUCT",
            "title": "Whey Baunilha 900 g em oferta",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "endsAt": "2026-09-30T02:00:00.000Z",
            "id": "fim",
          },
        ],
        "kind": "COUNTDOWN",
        "position": 0,
        "title": "A oferta termina em",
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": "Estoque limitado",
        "title": "Oferta relâmpago",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 12,
        "position": 0,
        "source": "ON_SALE",
        "title": "Mais ofertas",
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "INLINE",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 4,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "body": "Garanta o seu antes que acabe.",
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "id": "botao",
            "label": "Aproveitar a oferta",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
          },
        ],
        "kind": "CALL_TO_ACTION",
        "position": 0,
        "title": "A oferta acaba logo",
      },
    ],
    "section": {
      "isActive": true,
      "position": 5,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > promocao-relampago with no category arranges the bands it always did 2`] = `"https://cdn.example/whey.png"`;

exports[`the templates that existed before the catalogue > promocao-relampago with no picture arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "subtitle": "Só por pouco tempo",
        "title": "Whey Baunilha 900 g em oferta",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "endsAt": "2026-09-30T02:00:00.000Z",
            "id": "fim",
          },
        ],
        "kind": "COUNTDOWN",
        "position": 0,
        "title": "A oferta termina em",
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": "Estoque limitado",
        "title": "Oferta relâmpago",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 12,
        "position": 0,
        "source": "ON_SALE",
        "title": "Mais ofertas",
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "INLINE",
        "isActive": true,
        "items": [
          {
            "detail": "Transferência na hora",
            "icon": "qr-code",
            "id": "pix",
            "title": "PIX",
          },
          {
            "detail": "Na entrega",
            "icon": "banknote",
            "id": "money",
            "title": "Dinheiro",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 4,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "body": "Garanta o seu antes que acabe.",
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "id": "botao",
            "label": "Aproveitar a oferta",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
          },
        ],
        "kind": "CALL_TO_ACTION",
        "position": 0,
        "title": "A oferta acaba logo",
      },
    ],
    "section": {
      "isActive": true,
      "position": 5,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > promocao-relampago with no picture arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > promocao-relampago with no product arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Minha página",
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "CONTAINED",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > promocao-relampago with no product arranges the bands it always did 2`] = `null`;

exports[`the templates that existed before the catalogue > promocao-relampago with nothing to promise arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "display": "BACKDROP",
        "isActive": true,
        "items": [
          {
            "id": "capa",
            "imageUrl": "https://cdn.example/whey.png",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "subtitle": "Só por pouco tempo",
            "target": "PRODUCT",
            "title": "Whey Baunilha 900 g em oferta",
          },
        ],
        "kind": "BANNER",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "position": 0,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "endsAt": "2026-09-30T02:00:00.000Z",
            "id": "fim",
          },
        ],
        "kind": "COUNTDOWN",
        "position": 0,
        "title": "A oferta termina em",
      },
    ],
    "section": {
      "isActive": true,
      "position": 1,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "display": "IMAGE_LEFT",
        "isActive": true,
        "items": [
          {
            "id": "destaque",
            "productId": "0199e000-0000-7000-8000-000000000001",
          },
        ],
        "kind": "FEATURED_PRODUCT",
        "position": 0,
        "subtitle": "Estoque limitado",
        "title": "Oferta relâmpago",
      },
    ],
    "section": {
      "isActive": true,
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "RAIL",
        "isActive": true,
        "items": [],
        "kind": "PRODUCTS",
        "limit": 12,
        "position": 0,
        "source": "ON_SALE",
        "title": "Mais ofertas",
      },
    ],
    "section": {
      "isActive": true,
      "position": 3,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "INLINE",
        "isActive": true,
        "items": [],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": false,
      "position": 4,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "body": "Garanta o seu antes que acabe.",
        "display": "BAND",
        "isActive": true,
        "items": [
          {
            "id": "botao",
            "label": "Aproveitar a oferta",
            "productId": "0199e000-0000-7000-8000-000000000001",
            "target": "PRODUCT",
          },
        ],
        "kind": "CALL_TO_ACTION",
        "position": 0,
        "title": "A oferta acaba logo",
      },
    ],
    "section": {
      "isActive": true,
      "position": 5,
      "width": "FULL",
    },
  },
]
`;

exports[`the templates that existed before the catalogue > promocao-relampago with nothing to promise arranges the bands it always did 2`] = `"https://cdn.example/whey.png"`;

exports[`the templates that existed before the catalogue > servicos-b2b arranges the bands it always did 1`] = `
[
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "subtitle": "Uma frase que diga o que vocês fazem e para quem. Troque este texto no modo design.",
        "title": "Sua empresa, apresentada como ela é",
      },
    ],
    "section": {
      "isActive": true,
      "name": "Início",
      "position": 0,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "isActive": true,
        "items": [
          {
            "detail": "O que traz mais clientes",
            "icon": "truck",
            "id": "servico-1",
            "title": "Serviço principal",
          },
          {
            "detail": "Certificações e cuidados",
            "icon": "shield-check",
            "id": "servico-2",
            "title": "Segurança",
          },
          {
            "detail": "Tempo médio de atendimento",
            "icon": "clock",
            "id": "servico-3",
            "title": "Prazo",
          },
          {
            "detail": "Regiões e estados atendidos",
            "icon": "map-pin",
            "id": "servico-4",
            "title": "Área de atuação",
          },
        ],
        "kind": "BENEFITS",
        "position": 0,
      },
    ],
    "section": {
      "isActive": true,
      "name": "Serviços",
      "position": 1,
      "width": "FULL",
    },
  },
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "title": "Sobre a empresa",
      },
      {
        "align": "CENTER",
        "body": "Conte a história em poucas linhas: quando começou, o que faz melhor e por que um cliente escolhe vocês.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 1,
      },
    ],
    "section": {
      "isActive": true,
      "name": "Sobre",
      "position": 2,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "isActive": true,
        "items": [],
        "kind": "HEADING",
        "position": 0,
        "subtitle": "Do pedido à entrega",
        "title": "Como funciona",
      },
      {
        "align": "CENTER",
        "body": "1. Você entra em contato.
2. Recebe a proposta.
3. Acompanha a entrega.",
        "isActive": true,
        "items": [],
        "kind": "TEXT",
        "position": 1,
      },
    ],
    "section": {
      "isActive": true,
      "name": "Como funciona",
      "position": 3,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "display": "ACCORDION",
        "isActive": true,
        "items": [
          {
            "answer": "Conte em quanto tempo vocês respondem e começam um trabalho.",
            "id": "prazo",
            "question": "Qual é o prazo de atendimento?",
          },
          {
            "answer": "Diga as cidades e os estados em que a empresa atua.",
            "id": "regiao",
            "question": "Vocês atendem a minha região?",
          },
          {
            "answer": "Preencha o formulário abaixo e respondemos em até um dia útil.",
            "id": "orcamento",
            "question": "Como peço um orçamento?",
          },
        ],
        "kind": "FAQ",
        "position": 0,
        "title": "Perguntas frequentes",
      },
    ],
    "section": {
      "isActive": true,
      "name": "Dúvidas",
      "position": 4,
      "width": "CONTAINED",
    },
  },
  {
    "components": [
      {
        "isActive": true,
        "items": [
          {
            "id": "email",
            "label": "E-mail",
            "required": true,
            "type": "EMAIL",
          },
          {
            "id": "telefone",
            "label": "Telefone",
            "required": true,
            "type": "PHONE",
          },
          {
            "id": "empresa",
            "label": "Empresa",
            "required": false,
            "type": "TEXT",
          },
          {
            "id": "mensagem",
            "label": "O que você precisa?",
            "required": true,
            "type": "TEXTAREA",
          },
        ],
        "kind": "CONTACT",
        "position": 0,
        "subtitle": "Conte o que precisa e respondemos em até um dia útil.",
        "title": "Fale com a gente",
      },
    ],
    "section": {
      "isActive": true,
      "name": "Contato",
      "position": 5,
      "width": "CONTAINED",
    },
  },
]
`;
